[gd_scene load_steps=15 format=3 uid="uid://cb3satgchcg1i"]

[ext_resource type="Script" path="res://enemies/spiky/Spiky.gd" id="1_gcqvx"]
[ext_resource type="Script" path="res://classes/Interpolator.gd" id="2_djdl5"]
[ext_resource type="Script" path="res://classes/Stat.gd" id="2_w6265"]
[ext_resource type="Script" path="res://classes/HitBox.gd" id="3_e1fb7"]
[ext_resource type="Script" path="res://visual_effects/PolySprite.gd" id="4_2pq2e"]
[ext_resource type="Script" path="res://classes/AvoidanceAgent.gd" id="4_f00v0"]
[ext_resource type="Script" path="res://audio/SoundMaker.gd" id="7_rm6rk"]
[ext_resource type="AudioStream" uid="uid://bxmc65alvyob4" path="res://audio/boom.wav" id="8_1kjpr"]

[sub_resource type="Resource" id="Resource_fgdoh"]
resource_local_to_scene = true
script = ExtResource("2_w6265")
use_min_value = false
use_max_value = false
base = 10.0
round_mode = 0

[sub_resource type="Resource" id="Resource_ascym"]
resource_local_to_scene = true
script = ExtResource("2_w6265")
use_min_value = true
use_max_value = false
base = 1.0
round_mode = 0
min_value = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qpxtk"]

[sub_resource type="Image" id="Image_eyjqx"]
data = {
"data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 2, 1, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 0, 0, 37, 13, 11, 54, 8, 3, 2, 12, 0, 0, 0, 0, 2, 1, 1, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 27, 9, 8, 39, 131, 44, 40, 191, 0, 0, 0, 0, 0, 0, 0, 0, 2, 1, 1, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 0, 0, 137, 46, 42, 200, 147, 49, 44, 213, 0, 0, 0, 0, 0, 0, 0, 0, 2, 1, 1, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 2, 1, 1, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 3, 1, 1, 5, 0, 0, 0, 0, 69, 23, 21, 100, 201, 68, 61, 255, 136, 46, 41, 198, 0, 0, 0, 1, 0, 0, 0, 0, 2, 1, 1, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 12, 4, 4, 17, 165, 56, 50, 241, 191, 64, 58, 255, 141, 47, 43, 205, 2, 1, 1, 3, 0, 0, 0, 0, 2, 1, 1, 3, 0, 0, 0, 0, 4, 1, 1, 6, 0, 0, 0, 0, 0, 0, 0, 0, 61, 20, 18, 88, 11, 4, 3, 17, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 6, 2, 2, 8, 154, 52, 47, 224, 176, 59, 53, 255, 187, 63, 57, 255, 143, 48, 43, 208, 4, 1, 1, 5, 0, 0, 0, 0, 5, 2, 2, 7, 0, 0, 0, 0, 4, 1, 1, 6, 143, 48, 43, 208, 185, 62, 56, 255, 11, 4, 3, 16, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 4, 1, 1, 5, 0, 0, 0, 0, 92, 31, 28, 134, 192, 65, 58, 255, 168, 57, 51, 245, 187, 63, 57, 255, 145, 49, 44, 212, 7, 2, 2, 11, 0, 0, 0, 0, 63, 21, 19, 91, 152, 51, 46, 222, 196, 66, 59, 255, 112, 38, 34, 164, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 1, 0, 2, 0, 0, 0, 0, 37, 13, 11, 54, 178, 60, 54, 255, 176, 59, 53, 255, 172, 58, 52, 250, 189, 64, 57, 255, 136, 46, 41, 199, 74, 25, 22, 108, 188, 63, 57, 255, 178, 60, 54, 255, 188, 63, 57, 255, 82, 28, 25, 119, 0, 0, 0, 0, 3, 1, 1, 4, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 2, 151, 51, 46, 220, 181, 61, 55, 255, 175, 59, 53, 255, 173, 58, 52, 252, 180, 61, 54, 255, 185, 62, 56, 255, 174, 59, 53, 254, 170, 57, 51, 248, 189, 64, 57, 255, 90, 30, 27, 131, 0, 0, 0, 0, 5, 2, 1, 7, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 2, 1, 1, 4, 5, 2, 2, 8, 0, 0, 0, 0, 80, 27, 24, 116, 191, 64, 58, 255, 172, 58, 52, 251, 175, 59, 53, 255, 174, 59, 53, 253, 173, 58, 52, 252, 175, 59, 53, 255, 172, 58, 52, 250, 190, 64, 58, 255, 81, 27, 25, 118, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 3, 1, 1, 5, 2, 1, 1, 3, 2, 1, 1, 3, 2, 1, 1, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 1, 1, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 37, 12, 11, 54, 147, 50, 45, 214, 181, 61, 55, 255, 174, 59, 53, 254, 175, 59, 53, 255, 175, 59, 53, 255, 175, 59, 53, 255, 175, 59, 53, 255, 174, 59, 53, 254, 178, 60, 54, 255, 157, 53, 47, 228, 76, 26, 23, 111, 36, 12, 11, 53, 15, 5, 5, 22, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 1, 0, 2, 2, 1, 1, 3, 0, 0, 0, 0, 0, 0, 0, 0, 2, 1, 1, 3, 0, 0, 0, 0, 12, 4, 4, 17, 48, 16, 14, 70, 125, 42, 38, 182, 183, 62, 55, 255, 181, 61, 55, 255, 174, 59, 53, 254, 175, 59, 53, 255, 175, 59, 53, 255, 175, 59, 53, 255, 175, 59, 53, 255, 175, 59, 53, 255, 175, 59, 53, 255, 174, 59, 53, 254, 181, 61, 55, 255, 184, 62, 56, 255, 187, 63, 57, 255, 154, 52, 47, 224, 130, 44, 39, 190, 84, 28, 25, 122, 32, 11, 10, 47, 38, 13, 11, 55, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 22, 19, 94, 179, 60, 54, 255, 197, 66, 60, 255, 183, 62, 55, 255, 171, 58, 52, 250, 174, 58, 53, 253, 175, 59, 53, 255, 175, 59, 53, 255, 175, 59, 53, 255, 175, 59, 53, 255, 175, 59, 53, 255, 175, 59, 53, 255, 175, 59, 53, 255, 175, 59, 53, 255, 174, 59, 53, 253, 172, 58, 52, 250, 170, 57, 51, 247, 178, 60, 54, 255, 184, 62, 56, 255, 189, 64, 57, 255, 196, 66, 59, 255, 191, 64, 58, 255, 145, 49, 44, 211, 132, 44, 40, 192, 7, 2, 2, 10, 0, 0, 0, 0, 0, 0, 0, 0, 19, 7, 6, 28, 92, 31, 28, 134, 134, 45, 41, 196, 177, 60, 54, 255, 186, 63, 56, 255, 175, 59, 53, 255, 175, 59, 53, 255, 175, 59, 53, 255, 175, 59, 53, 255, 175, 59, 53, 255, 175, 59, 53, 255, 175, 59, 53, 255, 175, 59, 53, 255, 175, 59, 53, 255, 173, 58, 52, 253, 180, 61, 54, 255, 187, 63, 57, 255, 182, 61, 55, 255, 185, 62, 56, 255, 153, 52, 46, 223, 122, 41, 37, 178, 122, 41, 37, 178, 56, 19, 17, 81, 47, 16, 14, 69, 3, 1, 1, 4, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 40, 13, 12, 58, 125, 42, 38, 183, 178, 60, 54, 255, 175, 59, 53, 255, 175, 59, 53, 255, 175, 59, 53, 255, 175, 59, 53, 255, 175, 59, 53, 255, 175, 59, 53, 255, 175, 59, 53, 255, 173, 58, 52, 253, 183, 62, 56, 255, 152, 51, 46, 222, 127, 43, 38, 185, 81, 27, 25, 119, 35, 12, 11, 51, 15, 5, 5, 22, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 3, 1, 1, 4, 2, 1, 1, 3, 0, 0, 0, 0, 0, 0, 0, 0, 98, 33, 30, 143, 189, 64, 57, 255, 173, 58, 52, 252, 175, 59, 53, 255, 175, 59, 53, 254, 174, 59, 53, 253, 175, 59, 53, 255, 172, 58, 52, 251, 186, 63, 56, 255, 109, 37, 33, 159, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 3, 1, 1, 5, 2, 1, 1, 3, 2, 1, 1, 3, 2, 1, 1, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 4, 1, 1, 5, 0, 0, 0, 0, 110, 37, 33, 160, 187, 63, 57, 255, 173, 58, 52, 252, 174, 59, 53, 254, 175, 59, 53, 255, 180, 61, 55, 255, 173, 58, 52, 252, 172, 58, 52, 250, 190, 64, 58, 255, 82, 28, 25, 120, 0, 0, 0, 0, 6, 2, 2, 9, 2, 1, 1, 3, 2, 1, 1, 3, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 11, 4, 3, 16, 172, 58, 52, 251, 178, 60, 54, 255, 174, 59, 53, 254, 177, 60, 54, 255, 174, 59, 53, 253, 151, 51, 46, 220, 185, 62, 56, 255, 168, 57, 51, 246, 189, 64, 57, 255, 88, 30, 27, 129, 0, 0, 0, 0, 2, 1, 1, 4, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 3, 1, 1, 5, 0, 0, 0, 0, 69, 23, 21, 101, 186, 63, 56, 255, 172, 58, 52, 251, 175, 59, 53, 254, 187, 63, 57, 255, 67, 23, 20, 97, 1, 0, 0, 1, 144, 49, 44, 210, 185, 62, 56, 255, 190, 64, 58, 255, 84, 28, 26, 123, 0, 0, 0, 0, 3, 1, 1, 4, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 121, 41, 37, 176, 185, 62, 56, 255, 173, 58, 52, 252, 186, 63, 56, 255, 66, 22, 20, 97, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 73, 25, 22, 106, 185, 62, 56, 255, 160, 54, 49, 234, 5, 2, 1, 7, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 6, 2, 2, 8, 168, 57, 51, 245, 178, 60, 54, 255, 185, 62, 56, 255, 64, 21, 19, 93, 0, 0, 0, 0, 3, 1, 1, 4, 2, 1, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 22, 7, 7, 31, 130, 44, 39, 190, 17, 6, 5, 25, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 1, 1, 3, 0, 0, 0, 0, 39, 13, 12, 57, 175, 59, 53, 255, 185, 62, 56, 255, 61, 21, 18, 89, 0, 0, 0, 0, 3, 1, 1, 4, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 3, 1, 1, 4, 0, 0, 0, 0, 2, 1, 1, 3, 4, 1, 1, 5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 3, 1, 1, 5, 0, 0, 0, 0, 97, 33, 29, 142, 200, 67, 61, 255, 55, 19, 17, 80, 0, 0, 0, 0, 3, 1, 1, 5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 1, 1, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 4, 1, 1, 6, 163, 55, 49, 238, 60, 20, 18, 87, 0, 0, 0, 0, 3, 1, 1, 5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 0, 0, 46, 15, 14, 66, 57, 19, 17, 83, 0, 0, 0, 0, 3, 1, 1, 5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 10, 3, 3, 15, 0, 0, 0, 0, 2, 1, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 10, 3, 3, 14, 3, 1, 1, 4, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 7, 2, 2, 10, 104, 35, 32, 151, 1, 0, 0, 1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 2, 112, 38, 34, 153, 117, 39, 36, 165, 1, 1, 1, 2, 1, 0, 0, 1, 1, 0, 0, 2, 15, 5, 5, 22, 3, 1, 1, 5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 2, 63, 21, 19, 92, 181, 61, 55, 253, 120, 40, 36, 170, 3, 1, 1, 5, 55, 18, 17, 80, 159, 54, 48, 221, 3, 1, 1, 4, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 10, 3, 3, 14, 172, 58, 52, 246, 177, 60, 54, 253, 144, 49, 43, 204, 178, 60, 54, 253, 137, 46, 42, 190, 2, 1, 1, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 1, 0, 0, 1, 11, 4, 3, 16, 150, 51, 46, 210, 174, 59, 53, 254, 174, 59, 53, 254, 174, 59, 53, 254, 152, 51, 46, 214, 28, 10, 9, 41, 5, 2, 2, 7, 1, 1, 1, 2, 1, 1, 0, 1, 1, 0, 0, 1, 17, 6, 5, 24, 109, 37, 33, 149, 166, 56, 50, 236, 176, 59, 54, 254, 175, 59, 53, 255, 175, 59, 53, 255, 175, 59, 53, 255, 176, 60, 54, 254, 178, 60, 54, 252, 162, 55, 49, 231, 125, 42, 38, 170, 94, 32, 28, 130, 35, 12, 11, 51, 5, 2, 2, 7, 57, 19, 17, 83, 132, 45, 40, 188, 176, 59, 53, 255, 175, 59, 53, 255, 175, 59, 53, 255, 175, 59, 53, 255, 176, 59, 53, 254, 162, 55, 49, 229, 121, 41, 37, 170, 73, 25, 22, 106, 45, 15, 14, 65, 13, 4, 4, 18, 0, 0, 0, 0, 1, 1, 1, 2, 1, 0, 0, 1, 146, 49, 44, 203, 174, 59, 53, 253, 176, 60, 54, 254, 173, 58, 52, 252, 142, 48, 43, 197, 2, 1, 1, 2, 1, 1, 1, 2, 1, 0, 0, 2, 1, 1, 1, 2, 1, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 2, 20, 7, 6, 29, 177, 60, 54, 253, 178, 60, 54, 255, 98, 33, 30, 143, 171, 58, 52, 242, 138, 47, 42, 191, 1, 1, 1, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 74, 25, 23, 107, 180, 61, 55, 254, 79, 27, 24, 111, 1, 1, 0, 2, 18, 6, 6, 27, 124, 42, 38, 178, 6, 2, 2, 8, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 2, 128, 43, 39, 177, 75, 26, 23, 106, 2, 1, 1, 2, 0, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 2, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 13, 4, 4, 18, 70, 24, 21, 102, 2, 1, 1, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 4, 1, 1, 6, 27, 9, 8, 39, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 118, 40, 36, 166, 31, 11, 10, 45, 58, 19, 18, 81, 2, 1, 1, 2, 0, 0, 0, 0, 1, 0, 0, 1, 86, 29, 26, 122, 167, 57, 51, 241, 160, 54, 49, 228, 9, 3, 3, 13, 1, 1, 0, 1, 47, 16, 14, 66, 163, 55, 49, 233, 175, 59, 53, 255, 176, 59, 53, 255, 156, 53, 47, 221, 84, 29, 26, 118, 1, 0, 0, 1, 86, 29, 26, 122, 157, 53, 48, 226, 156, 53, 47, 221, 1, 1, 1, 2, 1, 0, 0, 1, 0, 0, 0, 1, 114, 39, 35, 161, 21, 7, 6, 29, 36, 12, 11, 52, 2, 1, 1, 2, 0, 0, 0, 0, 38, 13, 11, 53, 22, 8, 7, 32, 1, 0, 0, 1, 74, 25, 22, 106, 170, 57, 52, 245, 63, 22, 19, 88, 50, 17, 15, 71, 93, 31, 28, 132, 1, 1, 1, 1, 76, 26, 23, 109),
"format": "RGBA8",
"height": 27,
"mipmaps": true,
"width": 27
}

[sub_resource type="ImageTexture" id="ImageTexture_twxhe"]
image = SubResource("Image_eyjqx")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_vxfg3"]
random_pitch = 1.2
random_volume_offset_db = 3.0
streams_count = 1
stream_0/stream = ExtResource("8_1kjpr")
stream_0/weight = 1.0

[node name="Spiky" type="RigidBody2D" groups=["Enemies"]]
collision_layer = 0
collision_mask = 7
script = ExtResource("1_gcqvx")
point_value = SubResource("Resource_fgdoh")
spawnable = false
despawn_distance = 5000.0
max_health = SubResource("Resource_ascym")
radius = 10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_qpxtk")

[node name="Interpolator" type="Node2D" parent="."]
script = ExtResource("2_djdl5")

[node name="Polygon2D" type="Polygon2D" parent="Interpolator"]
color = Color(0.686275, 0.231373, 0.207843, 1)
polygon = PackedVector2Array(15, 0, 4.33013, 2.5, 5, 8.66025, -2.18557e-07, 5, -7.5, 12.9904, -4.33013, 2.5, -10, -8.74228e-07, -4.33013, -2.5, -7.5, -12.9904, 5.96244e-08, -5, 5, -8.66025, 4.33013, -2.5)
script = ExtResource("4_2pq2e")
poly_tex = SubResource("ImageTexture_twxhe")
poly_off = Vector2(-11, -13.9904)

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
script = ExtResource("3_e1fb7")
contact_damage_enabled = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_qpxtk")

[node name="AvoidanceAgent" type="Node2D" parent="."]
script = ExtResource("4_f00v0")
dv_limit = 200.0
mask = 7
radius = 15.0

[node name="DeathSound" type="Node2D" parent="."]
script = ExtResource("7_rm6rk")
stream = SubResource("AudioStreamRandomizer_vxfg3")
volume = -10.0

[connection signal="death" from="." to="DeathSound" method="play" unbinds=1]
[connection signal="damage_dealt" from="HitBox" to="." method="_on_hit_box_damage_dealt"]
[connection signal="pre_update" from="AvoidanceAgent" to="." method="_on_avoidance_agent_pre_update"]
